# astera

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README-win32.md  README.md  build_unix.sh  build_win.bat  engine  premake4.lua  setup  setup.ps1  setup.sh  todo  unix_build  unix_setup  win_setup.ps1
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_issue_template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build.yml  build_docs.yml  build_linux.yml  build_osx.yml  build_windows.yml  codeql-analysis.yml  docs.yml  examples_linux.yml  examples_mac.yml  examples_windows.yml  linux.yml  windows.yml
cmake/: FindSphinx.cmake
dep/: ini.c  ini.h  linmath.h  nuklear_glfw_gl3.h
dep/GL/: glcorearb.h  glext.h
dep/cmake/: FindOpenALSoft.cmake
dep/glad/: glad.c  glad_gl.c
dep/glad/include/glad/: glad.h
dep/glfw/: CMakeLists.txt
dep/glfw/include/GLFW/: glfw3.h
dep/glfw/src/: input.c
dep/misc/: linmath.h  stb_vorbis.c  zip.h
dep/nanovg/: fontstash.h  nanovg.c  nanovg.h  nanovg_gl.h  nanovg_gl_utils.h  stb_truetype.h
dep/openal-soft/: CMakeLists.txt
dep/openal-soft/alc/effects/: reverb.cpp
dep/openal-soft/common/: win_main_utf8.h
dep/openal-soft/include/AL/: al.h
dep/stb/: stb_truetype.h  stb_vorbis.c
docs/: Asset Example.rst  Asset Guide.rst  Asset Reference.rst  Audio Example.rst  Audio Guide.rst  Audio Reference.rst  Basic Game Example.rst  Build Guide.rst  Build Reference.rst  Config Reference.rst  Contributing.rst  Dungeon Example.rst  Input Example.rst  Input Guide.rst  Input Reference.rst  README.md  Render Guide.rst  Render Reference.rst  Special Thanks.rst  Sprites Example.rst  Sys Guide.rst  Sys Reference.rst  UI Guide.rst  UI Reference.rst  building.md  building.txt  changelog-archive.txt  checksum Tool.rst  conf.py  contributing.md  index.html  index.md  index.rst  index.txt  macros.md  pakutil Tool.rst  setup.md
docs/_build/doctrees/: Asset Guide.doctree  Asset Reference.doctree  Audio Example.doctree  Audio Guide.doctree  Audio Reference.doctree  Basic Game Example.doctree  Build Guide.doctree  Building Guide.doctree  Collision Guide.doctree  Collision Reference.doctree  Config Guide.doctree  Config Reference.doctree  Contributing.doctree  Input Example.doctree  Input Guide.doctree  Input Reference.doctree  LICENSE.doctree  Macro Reference.doctree  Render Guide.doctree  Render Reference.doctree  Special Thanks.doctree  Sys Guide.doctree  Sys Reference.doctree  UI Example.doctree  UI Guide.doctree  UI Reference.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  Asset Guide.html  Asset Reference.html  Audio Example.html  Audio Guide.html  Audio Reference.html  Basic Game Example.html  Build Guide.html  Building Guide.html  Collision Guide.html  Collision Reference.html  Config Guide.html  Config Reference.html  Contributing.html  Input Example.html  Input Guide.html  Input Reference.html  LICENSE.html  Macro Reference.html  Render Guide.html  Render Reference.html  Special Thanks.html  Sys Guide.html  Sys Reference.html  UI Example.html  UI Guide.html  UI Reference.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: Asset Guide.rst.txt  Audio Example.rst.txt  Build Guide.rst.txt  Building Guide.rst.txt  Collision Reference.rst.txt  Config Guide.rst.txt  Input Example.rst.txt  Input Guide.rst.txt  LICENSE.rst.txt  Macro Reference.rst.txt  Sys Guide.rst.txt  UI Example.rst.txt  UI Guide.rst.txt  UI Reference.rst.txt
docs/examples/: Makefile
docs/examples/audio/: audio.c
docs/examples/music/: music.c
docs/examples/render_stress/: render_stress.c
docs/examples/ui/: ui.c
examples/: CMakeLists.txt  README.md  assets.c  audio.c  collision.c  config.c  debug.c  fighter.c  input.c  sprites.c
examples/advanced_game/: README.md  dungeon.c  dungeon.h  game.c  game.h  main.c  types.h
examples/audio/: README.md  audio.c  main.c
examples/basic_game/: README.md  basic.c  game.c  game.h  main.c
examples/config/: config_example.c
examples/input/: README.md  input.c  main.c
examples/post_processing/: shaders.c
examples/rendering/: README.md  main.c
examples/resources/shaders/: basic.frag  basic.vert  bg.frag  bg.vert  buffered.frag  buffered.vert  fbo.frag  instanced.vert  main.frag  main.vert  particles.frag  particles.vert  screen.frag  screen.vert  simple.vert  single.frag  single.vert
examples/shaders/: shaders_utilites.c  shaders_utilites.h
examples/sprites/: README.md  main.c  sprites.c
examples/ui/: README.md  ui.c
include/astera/: asset.h  audio.h  col.h  conf.h  debug.h  input.h  lerp.h  level.h  linmath.h  render.h  sys.h  ui.h
lib/Win64/: OpenAL32.exp  OpenAL32.ilk  OpenAL32.lib  OpenGL32.Lib  common.lib  glfw3.ilk  glfw3.lib  glfw3dll.exp
res/: conf.ini
res/shd/: main.f  main.frag  main.v  main.vert  particle.frag  particle.vert  screen.frag  screen.vert  stars.frag  stars.vert  std.frag  std.vert  test.f  test.v  ui.f  ui.v
src/: asset.c  asset.h  audio.c  audio.h  col.c  conf.c  conf.h  config.h  debug.c  debug.h  fmgr.c  fmgr.h  game.c  game.h  geom.c  geom.h  input.c  input.h  lerp.c  level.c  level.h  main.c  math.c  math.h  mem.c  mem.h  phys.c  phys.h  platform.c  platform.h  render.c  render.h  sys.c  sys.h  types.h  ui.c  ui.h
tool/: Makefile  README.md  ogg_converter.sh  unix_setup.sh  unzipper.sh  win_setup.ps1  zipper.sh
tool/src/: audio_sampler.c  unzip.c  zip.c
tools/: CMakeLists.txt  Makefile  README.md  build_unix.sh  build_win.bat  ogg_converter.sh  unzipper.sh  zipper.sh
tools/pakutil/: pakutil.c
tools/src/: audio_sampler.c
tst/: test_render.c
util/: Makefile  compress  compress.c  out.txt
util/res/shd/: main.v
